1、修改驱动文件的名称为sr2000.ko；2、修改驱动创建节点前缀为sr2000_；3、修改驱动版本号

--- a/xdma/Makefile
+++ b/xdma/Makefile
@@ -11,7 +11,7 @@ $(warning XVC_FLAGS: $(XVC_FLAGS).)
 
 topdir := $(shell cd $(src)/.. && pwd)
 
-TARGET_MODULE:=xdma
+TARGET_MODULE:=sr2000
 
 EXTRA_CFLAGS := -I$(topdir)/include $(XVC_FLAGS)
 #EXTRA_CFLAGS += -D__LIBXDMA_DEBUG__
